--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "embed-player",
   "version": "1.0.0",
   "description": "A simple proxy for embedding players and removing redirections",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
